<resources>
    <string name="app_name">AmaizingWeather</string>
    <string name="temp_main_activity">+15</string>
    <string name="text_cels">°C</string>
    <string name="text_cities">Выберите город</string>
    <string name="hours">По часам</string>
    <string name="forecast">Прогноз</string>
    <string name="weather_type">Облачно</string>
    <string name="todo">TODO</string>
    <string name="info1">Ощущается: </string>
    <string name="info11">%1$d°C</string>
    <string name="plus_info11">+%1$d°C</string>
    <string name="info2">Влажность: </string>
    <string name="info22">%1$d %%</string>
    <string name="info3">Ветер:</string>
    <string name="info33">%1$d м/c</string>
    <string name="info333">%1$d км/ч</string>
    <string name="info4">Восход: </string>
    <string name="info5">Закат: </string>
    <string name="temp_cities_item">%1$d°C</string>
    <string name="check_cities_choose">Доп.инфо.</string>
    <string name="humidity_cities_item">Влажность:%1$d %%</string>
    <string name="wind_cities_item">Ветер:%1$d м/с</string>
    <string name="weather_text_to_search_browser">погода</string>
    <string name="text_error_load_data">"Ошибка загрузки данных"</string>
    <string name="text_settings">"Настройки"</string>
    <string name="error_load_data">Ошибка загрузки данных</string>
    <string name="searchview_hint_text">Поиск города</string>
    <string name="bottom_nav_settings">Настройки</string>
    <string name="bottom_nav_about">О приложении</string>
    <string name="bottom_nav_weather">Погода</string>
    <string name="bottom_nav_internet">В Интернете</string>
    <string name="about_app">О приложении</string>
    <string name="contact_info">Контактная информация</string>
    <string name="about_tel">tel:+79999999999</string>
    <string name="about_email">email:amaizzzing@gmail.com</string>
    <string name="error_city_search">Не верное название города!</string>
    <string name="weather_clear">Ясно</string>
    <string name="weather_clouds">Облачно</string>
    <string name="weather_fog">Переменная облачность</string>
    <string name="weather_rain">Дождь</string>
    <string name="update_weather">Обновить информацию о погоде</string>
    <string name="text_error_load_from_server">Не получены данные с сервера</string>
    <string name="update">Обновить</string>
    <string name="send_email_to_developers">Отправить e-mail разработчикам?</string>
    <string name="send">Отправить</string>
    <string name="current_date">currentDate</string>
    <string name="server">server</string>
    <string name="history">История</string>
    <string name="error_enter_temper">Введите температуру</string>
    <string name="begin_diapozon">начало диапозона</string>
    <string name="end_diapozon">конец диапозона</string>
    <string name="begin_temperature">Начальная температура</string>
    <string name="end_temperature">Конечная температура</string>
    <string name="search">Поиск</string>
    <string name="maps">Карты</string>
    <string name="openweathermap_org">Прогноз погоды предоставлен: openweathermap.org</string>
    <string name="politics_text">Политика конфиденциальности</string>
    <string name="title_weather">Weather</string>
    <string name="title_map">Map</string>
    <string name="title_notifications">Notifications</string>
    <string name="not_result">Нет результатов!</string>
    <string name="title_weather_update">Погода обновлена</string>
</resources>