<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    card_view:cardCornerRadius="30dp"
    card_view:cardUseCompatPadding="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/contact_info"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:text="@string/about_email"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:text="@string/openweathermap_org"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/politicsButton_AboutApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/politics_text"/>
            </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSendEmail_AboutApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            app:srcCompat="@android:drawable/ic_dialog_email" />
    </FrameLayout>
</androidx.cardview.widget.CardView>