<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ProgressBar
        android:id="@+id/pb_DialogFromMap"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="visible"
        android:layout_gravity="center"
        android:indeterminateDrawable="@layout/progress_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nameLocation_DialogFromMap"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:id="@+id/llMainLayout_DialogFromMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">
        <TextView
            android:id="@+id/nameLocation_DialogFromMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingBottom="4dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@drawable/weather_img"
            android:id="@+id/weatherImage_DialogFromMap"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/typeWeither_DialogFromMap"
            app:layout_constraintTop_toBottomOf="@+id/nameLocation_DialogFromMap"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/typeWeither_DialogFromMap"
            android:text="@string/weather_type"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weatherImage_DialogFromMap"
            app:layout_constraintTop_toTopOf="@+id/weatherImage_DialogFromMap"
            app:layout_constraintBottom_toBottomOf="@+id/weatherImage_DialogFromMap"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/clCurrTemp_DialogFromMap"
            android:paddingEnd="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/llDayInfo_DialogFromMap"
            app:layout_constraintTop_toTopOf="@+id/llDayInfo_DialogFromMap"
            app:layout_constraintBottom_toBottomOf="@+id/llDayInfo_DialogFromMap">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temp_DialogFromMap"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:text="@string/temp_main_activity"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cels"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="@+id/temp_DialogFromMap"
                app:layout_constraintStart_toEndOf="@+id/temp_DialogFromMap"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/llDayInfo_DialogFromMap"
            android:orientation="vertical"
            android:layout_gravity="center"
            app:layout_constraintStart_toEndOf="@+id/clCurrTemp_DialogFromMap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/info1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/feels_DialogFromMap"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/info11"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/info2"/>

                <TextView
                    android:id="@+id/humidity_DialogFromMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/info22"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/info3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wind_DialogFromMap"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/info33"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/info4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sunrice_DialogFromMap"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="start"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/info5"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sunset_DialogFromMap"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="start"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
