<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainAdView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1258070941948820/4838328986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/currentCity_MainActivity">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currentCity_MainActivity"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@color/transGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textCurrentCity_MainActivity"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textCurrentCity_MainActivity"
        android:text="@string/text_cities"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:gravity="center"
        android:background="@color/transGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llRecycler_MainFragment"/>
    <LinearLayout
        android:id="@+id/llRecycler_MainFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/transGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llBottomInfo_MainActivity">
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvHistory_MainFragment"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/invisible_color"
            card_view:cardCornerRadius="10dp"
            card_view:cardUseCompatPadding="true">
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                card_view:cardBackgroundColor="@color/some_invisible_color"
                card_view:cardCornerRadius="10dp"
                card_view:cardUseCompatPadding="true">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/history"/>
                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvSomeDays_MainFragment"
            android:background="@color/invisible_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llBottomInfo_MainActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.amaizzzing.amaizingweather.custom_view.ThermometerView
            android:id="@+id/thermometrView_MainFragment"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@color/transGrey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/transGrey"
        android:paddingBottom="6dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/weather_img"
                android:id="@+id/weatherImage_MainActivity"
                android:layout_marginTop="4dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/typeWeither_MainActivity"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/typeWeither_MainActivity"
                android:text="@string/weather_type"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:layout_marginTop="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weatherImage_MainActivity"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/clCurrTemp_MainActivity"
                android:paddingEnd="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/llDayInfo_MainActivity"
                app:layout_constraintBottom_toBottomOf="@+id/llDayInfo_MainActivity">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_MainActivity"
                    android:textSize="55sp"
                    android:textColor="@color/black"
                    android:text="@string/temp_main_activity"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cels"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toTopOf="@+id/temp_MainActivity"
                    app:layout_constraintStart_toEndOf="@+id/temp_MainActivity"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/llDayInfo_MainActivity"
                android:orientation="vertical"
                android:layout_gravity="center"
                app:layout_constraintStart_toEndOf="@+id/clCurrTemp_MainActivity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/info1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/feels_MainActivity"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:text="@string/info11"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/info2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/humidity_MainActivity"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:text="@string/info22"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/info3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/wind_MainActivity"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:text="@string/info33"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/info4"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sunrice_MainActivity"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        android:gravity="start"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/info5"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sunset_MainActivity"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        android:gravity="start"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>