<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="10dp"
        card_view:cardUseCompatPadding="true">
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardUseCompatPadding="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clForClickAllExerItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/imgWeather_CitiesItem"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/temp_CitiesItem"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/humidity_CitiesItem"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temp_CitiesItem"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/temp_cities_item"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@+id/imgWeather_CitiesItem"
                app:layout_constraintEnd_toStartOf="@+id/nameCity_CitiesItem"
                app:layout_constraintTop_toTopOf="@+id/imgWeather_CitiesItem"
                app:layout_constraintBottom_toBottomOf="@+id/imgWeather_CitiesItem"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/nameCity_CitiesItem"
                android:textSize="24sp"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@+id/temp_CitiesItem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/placeInfo_CitiesItem"/>
            <TextView
                android:id="@+id/placeInfo_CitiesItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@+id/nameCity_CitiesItem"
                app:layout_constraintEnd_toEndOf="@+id/nameCity_CitiesItem"
                app:layout_constraintTop_toBottomOf="@+id/nameCity_CitiesItem"
                app:layout_constraintBottom_toTopOf="@+id/humidity_CitiesItem"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/humidity_CitiesItem"
                android:textSize="18sp"
                android:gravity="center"
                android:visibility="visible"
                android:text="@string/humidity_cities_item"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/wind_CitiesItem"
                app:layout_constraintTop_toBottomOf="@+id/placeInfo_CitiesItem"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/wind_CitiesItem"
                android:textSize="18sp"
                android:gravity="center"
                android:visibility="visible"
                android:text="@string/wind_cities_item"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/humidity_CitiesItem"
                app:layout_constraintTop_toBottomOf="@+id/placeInfo_CitiesItem"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
</FrameLayout>